fixed spacing for mobile view

--- a/src/components/styles/Style.css
+++ b/src/components/styles/Style.css
@@ -207,13 +207,10 @@ section {
 
 /* ABOUT  */
 
-#about {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 .about .content {
   padding: 30px 0;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .about .content h3 {
